--- a/config/nginx/nginx.tmpl
+++ b/config/nginx/nginx.tmpl
@@ -168,13 +168,40 @@ server {
     include /etc/nginx/vhost.d/default;
     {{ end }}
 
-
     location /socket.io {
         proxy_http_version 1.1;
         proxy_buffering off;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
         proxy_pass http://api:5000/socket.io;
+    }
+
+    ## API resource with extended timeout for huge cost operations
+    location @orakwlum-api-ht {
+        #include uwsgi_params;
+        #uwsgi_pass api:5000;
+        #uwsgi_read_timeout      1200;
+        #uwsgi_connect_timeout   1200;
+        #uwsgi_send_timeout      1200;        
+        #uwsgi_ignore_client_abort on;
+
+        proxy_pass http://api:5000;
+        proxy_read_timeout      1200;
+        proxy_connect_timeout   1200;
+        proxy_send_timeout      1200;        
+        send_timeout      1200;
+
+        proxy_request_buffering off;
+        proxy_buffering off;
+
+        #add_header Access-Control-Allow-Origin "http://$HOST_NAME";
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, OPTIONS";
+        add_header Access-Control-Allow-Headers: "Authorization, Origin, X-Requested-With, Content-Type, Accept";
+    }
+
+    ## /api consumptions location
+    location /api/v1/consumptions { 
+        try_files $uri @orakwlum-api-ht;
     }
 
     location / {
