--- a/config/nginx/nginx.tmpl
+++ b/config/nginx/nginx.tmpl
@@ -176,6 +176,22 @@ server {
         proxy_pass http://api:5000/socket.io;
     }
 
+
+    location @orakwlum-api {
+        proxy_pass http://api:5000;
+        #proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
+        #proxy_redirect off;
+        proxy_read_timeout      30;
+        proxy_connect_timeout   30;
+        proxy_send_timeout      30;
+        send_timeout            30;
+
+        #add_header Access-Control-Allow-Origin "http://$HOST_NAME";
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, OPTIONS";
+        add_header Access-Control-Allow-Headers: "Authorization, Origin, X-Requested-With, Content-Type, Accept";
+    }
+
+
     ## API resource with extended timeout for huge cost operations
     location @orakwlum-api-ht {
         #include uwsgi_params;
@@ -202,6 +218,11 @@ server {
     ## /api consumptions location
     location /api/v1/consumptions { 
         try_files $uri @orakwlum-api-ht;
+    }
+
+    ## /api consumptions location
+    location /api {
+        try_files $uri @orakwlum-api;
     }
 
     location / {
